--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RailChat — Train Journey Chat</title>
+  <title>RailChat - Train Journey Chat</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
           </button>
         </form>
         
-        <p class="privacy-note">No account needed. Chat disappears when the journey ends.</p>
+        <p class="privacy-note">No account needed | No Chat Storage | Chat disappears when the journey ends.</p>
       </div>
       
       <div class="track-decoration">
