Improve join screen UI and train-based room inputs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,6 +91,15 @@
       </footer>
     </div>
   </div>
+  <div class="input-group">
+  <label for="train-no">Train Number</label>
+  <input type="text" id="train-no" placeholder="e.g. 12555" maxlength="6">
+</div>
+<div class="input-group">
+  <label for="journey-date">Journey Date</label>
+  <input type="date" id="journey-date">
+</div>
+
 
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script src="script.js"></script>
